# Hyperion

./: .commit-message.txt  .dockerignore  .editorconfig  .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  ALL_DONE.md  ANALYZER_READY.md  CHANGELOG.md  CLAUDE.md  CLAUDE_CODE_CONTEXT_HYPERION.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  LICENSE  MARKDOWN_CLI_DONE.md  QUICK_START.md  README-docker.md  README.md  REPOSITORY_CLEANUP_NOTICE.md  SESSION_2024-12-20.md  STRUCTURE_ANALYSIS.md  deploy.py  docker-compose.yml  hyperion_master.sh  install_v2.sh  mini_git_summary.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_tests.sh  setup.py  test_validation_final.py
.github/workflows/: ci.yml
code/: export_prod_history.py  generate_markdown_from_yaml.py  hyperion_git_profil.py  ingest_prod_history_to_neo4j.py  json_to_hyperion_yaml.py
config/: filters.yaml  openwebui_hyperion_function.py
content/registre/: requests.md
content/requests/: index.md
data/: numstat.txt  prod_commits.jsonl  quality_metrics.db  requests.yaml  requests_V4.yaml
data_backup_20251223_155134/: README.md  commits.tsv  contributors.tsv  file_changes.tsv  git_summary.json  prod_deploys.json  prod_files.jsonl  requests_V2.yaml  requests_V3.yaml
data_backup_20251223_155134/repositories/requests/: README.md  profile.json  profile.yaml
deployment/: deploy_hyperion.py  deployment_total_fr.py
docs/: CHANGELOG.md  FOLDERS.md  GUIDE_UTILISATION_COMPLETE.md  HYPERION_MASTER_V2_UPDATE.md  HYPERION_POINTS_ATTENTION_GENAI.md  INGESTION_V2_NEO4J_READY.md  NEO4J_STRUCTURE_V1_V2.md  ORGANIZATION_DONE.md  PATCH_MASTER_V1_V2.md  README.md  TEST_PLAN.md  TEST_PLAN_SUMMARY.md  V1.5-MIGRATION.md
docs/api/: README.md
docs/archive/: ARCHITECTURE_v1.5.md  CLEANUP_PLAN.md  v3.0-enterprise-plan.md
docs/cours/: 01-introduction.md  02-installation.md  03-premier-usage.md  04-cli-essentials.md  05-api-basics.md  06-rag-chat.md  07-infrastructure-ml.md  08-workflows.md  09-troubleshooting.md  10-advanced-usage.md  README.md
docs/deployment/: README.md  orchestrator.md
docs/guides/: MODEL_SELECTION_GUIDE.md  RAG_SETUP.md  getting_started.md
docs/status/: API_DONE.md  DASHBOARD_DONE.md  PUSH_READY.md  RAG_DONE.md  README.md  REFACTORING_SUMMARY.md  ULTIMATE_SCRIPT_DONE.md
docs/technique/: README.md
docs/technique/advanced/: code-intelligence.md  impact-analysis.md  neo4j-integration.md
docs/technique/architecture/: README.md  data-flow.md  deployment.md  system-overview.md  v3-enterprise-architecture.md
docs/technique/development/: code-quality.md  contributing.md
docs/technique/getting-started/: quickstart.md
docs/technique/legacy/: cleanup-plan.md  old-architecture.md  project-health.md  structure-analysis.md
docs/technique/ml-platform/: README.md
docs/technique/reference/: api-reference.md  cli-reference.md
docs/technique/user-guide/: README.md
docs/v2/: code_understanding.md  impact_analysis.md
eval/: run.py
eval/datasets/: questions.json
eval/metrics/: reporter.py
eval/suites/: core.yaml
frontend/: README.md  index.html
hyperion/: config.py
hyperion/api/: main.py  openai_compat.py
hyperion/cli/: main.py
hyperion/core/: README.md  __init__.py
hyperion/generators/: __init__.py  markdown_generator.py
hyperion/integrations/: __init__.py
hyperion/rag/: __init__.py  ingestion.py  query.py
hyperion/utils/: README.md  __init__.py
mlruns/0/: meta.yaml
mlruns/0/428bec39b992463d84d018a8cd147b89/: meta.yaml
mlruns/560553070072455507/: meta.yaml
modeles/: risk_predictor_isolation_forest_v1.0.0.pkl  risk_predictor_meta_learner_v1.0.0.pkl  risk_predictor_meta_learner_v1.1.0.pkl  risk_predictor_random_forest_v1.0.0.pkl  risk_predictor_random_forest_v1.1.0.pkl  risk_predictor_xgboost_v1.0.0.pkl
modeles/metadata/: risk_predictor_isolation_forest_v1.0.0_metadata.json  risk_predictor_isolation_forest_v1.1.0_metadata.json  risk_predictor_meta_learner_v1.0.0_metadata.json  risk_predictor_meta_learner_v1.1.0_metadata.json  risk_predictor_random_forest_v1.0.0_metadata.json  risk_predictor_random_forest_v1.1.0_metadata.json  risk_predictor_test_model_v1.0.0_metadata.json  risk_predictor_xgboost_v1.0.0_metadata.json
models/ensemble/: ensemble_config.json  hyperion_enterprise_1766956443.joblib  hyperion_fr_model_1766956124.joblib  hyperion_test_model.joblib  test_model.joblib
scripts/: .gitignore  MASTER_SCRIPT.md  SETUP_ULTIMATE.md  check_specs.py  cleanup.py  ingest_rag.py  run_api.py  run_dashboard.py  setup-model.sh  setup_hyperion.sh  test_git_utils.py  test_neo4j.py
scripts/deploy/: hyperion_full_workflow.py  hyperion_master.sh  hyperion_master_final.sh
scripts/dev/: run_api.py  run_dashboard.py  test_analyzer_requests.py  test_git_utils.py  test_markdown_generator.py  test_neo4j.py  test_rag.py
scripts/docker/: analyze-repo.sh  hyperion-docker.sh  test-standalone.sh
scripts/maintenance/: check_specs.py  ingest_generalized.py  ingest_rag.py  migrate_old_data.py  test_ingestion_v2.py
scripts/setup/: setup_rag.sh
src/hyperion/: __init__.py  __version__.py  config.py  settings.py
templates/: index.md
templates/markdown/: registre.md.j2
tests/: __init__.py  conftest.py  test_cli.py  test_git_analyzer.py  test_git_utils.py  test_structure.py
tests/api/: test_api_smoke.py  test_openai_compat.py  test_repos.py
tests/architecture/: test_architecture_validation.py  test_hyperion_architecture.py
tests/benchmarks/: __init__.py  test_bench_impact.py
tests/deployment/: test_deployment_simple.py  test_final_deployment.py
tests/integration/: test_impact_flow.py  test_ingestion_generalized.py  test_quality_system_integration.py  test_quality_validation_simple.py
tests/rag/: test_quality_validation.py
tests/unit/: test_anomaly_detector.py  test_anomaly_metrics.py  test_anomaly_patterns.py  test_impact_analyzer.py  test_impact_predictor.py  test_impact_report.py  test_onboarding_path.py  test_understanding_indexer.py
tests/validation/: test_simple.py
(+216 files in other folders)
